--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ AZURE_STORAGE_CONTAINER_NAME=uploads
 
 # Claude API (if used)
 # Only needed if you're using the AI analysis features
-# CLAUDE_API_KEY=your_claude_api_key_here
-# CLAUDE_API_URL=https://api.anthropic.com/v1/messages
-# CLAUDE_MODEL=claude-3-sonnet-20240229
+ CLAUDE_API_KEY=your_claude_api_key_here
+ CLAUDE_API_URL=https://api.anthropic.com/v1/messages
+ CLAUDE_MODEL=claude-3-sonnet-20240229
 
 # Upload path configuration
 UPLOAD_FOLDER=uploads
